5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1671_1879.log
== SUBMITION (2019-04-24 14:56:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e = float(input("extras: "))
f = float(input("faltas: "))

H = e - ((1/4) * f)

if H > 400:
	G = 500.0
else:
	G = 100.0
	
print(e, "extras e",f ,"de falta")
print(G)
-- EXECUTION TIME:
0.137853
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:57:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e = float(input("extras: "))
f = float(input("faltas: "))

H = e - ((1/4) * f)

if H > 400:
	G = 500.0
else:
	G = 100.0
	
print(e, "extras e",f ,"de falta")
print(G)
-- OUTPUT:
420.0 extras e 20.0 de falta
500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:57:13) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e = float(input("extras: "))
f = float(input("faltas: "))

H = e - ((1/4) * f)

if H > 400:
	G = 500.0
else:
	G = 100.0
	
print(e, "extras e",f ,"de falta")
print(G)
-- OUTPUT:
420.0 extras e 20.0 de falta
500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:57:48) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e = float(input("extras: "))
f = float(input("faltas: "))

H = e - ((1/4) * f)

if H > 400:
	G = 500.0
else:
	G = 100.0
	
print(e, "extras e",f ,"de falta")
print(G)
-- OUTPUT:
420.0 extras e 20.0 de falta
500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:58:04) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e = float(input("extras: "))
f = float(input("faltas: "))

H = e - ((1/4) * f)

if H > 400:
	G = 500.0
else:
	G = 100.0
	
print(e, "extras e",f ,"de falta")
print(G)
-- EXECUTION TIME:
0.154737
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:58:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e = float(input("extras: "))
f = float(input("faltas: "))

H = e - ((1/4) * f)

if H > 400:
	G = 500.0
else:
	G = 100.0
	
print(e, "extras e",f ,"de falta")
print(round(G, 2))
-- OUTPUT:
420.0 extras e 20.0 de falta
500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:58:24) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e = float(input("extras: "))
f = float(input("faltas: "))

H = e - ((1/4) * f)

if H > 400:
	G = 500.0
else:
	G = 100.0
	
print(e, "extras e",f ,"de falta")
print(round(G, 2))
-- EXECUTION TIME:
0.121067
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:59:42) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e = float(input("extras: "))
f = float(input("faltas: "))

H = e - ((1/4) * f)
e = round(e, 2)
f = round(f, 2)
if H > 400:
	G = 500.0
else:
	G = 100.0
	
print(e, "extras e",f ,"de falta")
print(G)
-- OUTPUT:
420.0 extras e 20.0 de falta
500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:59:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e = float(input("extras: "))
f = float(input("faltas: "))

H = e - ((1/4) * f)
e = round(e, 2)
f = round(f, 2)
if H > 400:
	G = 500.0
else:
	G = 100.0
	
print(e, "extras e",f ,"de falta")
print(G)
-- EXECUTION TIME:
0.224976
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:00:09) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e = float(input("extras: "))
f = float(input("faltas: "))

H = e - ((1/4) * f)
e = round(e, 2)
f = round(f, 2)

if H > 400.0:
	G = 500.0
else:
	G = 100.0
	
print(e, "extras e",f ,"de falta")
print(G)
-- OUTPUT:
420.0 extras e 20.0 de falta
500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:00:11) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e = float(input("extras: "))
f = float(input("faltas: "))

H = e - ((1/4) * f)
e = round(e, 2)
f = round(f, 2)

if H > 400.0:
	G = 500.0
else:
	G = 100.0
	
print(e, "extras e",f ,"de falta")
print(G)
-- EXECUTION TIME:
0.161875
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:05:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e = float(input("extras: "))
f = float(input("faltas: "))

H = e - ((1/4) * f)
e = round(e, 2)
f = round(f, 2)

if H > 400.0:
	G = 500.0
else:
	G = 100.0
	
print(e, "extras e",f ,"de falta")
print(G)
-- EXECUTION TIME:
0.225198
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:05:42) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E = float(input("extras: "))
F = float(input("faltas: "))

H = E - ((1/4) * F)
E = round(e, 2)
F = round(f, 2)

if H > 400.0:
	G = 500.0
else:
	G = 100.0
	
print(E, "extras e",F ,"de falta")
print(G)
-- EXECUTION TIME:
0.110123
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1879/main.py", line 6, in <module>
    E = round(e, 2)
NameError: name 'e' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:05:43) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E = float(input("extras: "))
F = float(input("faltas: "))

H = E - ((1/4) * F)
E = round(e, 2)
F = round(f, 2)

if H > 400.0:
	G = 500.0
else:
	G = 100.0
	
print(E, "extras e",F ,"de falta")
print(G)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    E = round(e, 2)
NameError: name 'e' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:05:56) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E = float(input("extras: "))
F = float(input("faltas: "))

H = E - ((1/4) * F)
E = round(E, 2)
F = round(F, 2)

if H > 400.0:
	G = 500.0
else:
	G = 100.0
	
print(E, "extras e",F ,"de falta")
print(G)
-- EXECUTION TIME:
0.235566
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:05:57) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E = float(input("extras: "))
F = float(input("faltas: "))

H = E - ((1/4) * F)
E = round(E, 2)
F = round(F, 2)

if H > 400.0:
	G = 500.0
else:
	G = 100.0
	
print(E, "extras e",F ,"de falta")
print(G)
-- OUTPUT:
420.0 extras e 20.0 de falta
500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:06:03) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E = float(input("extras: "))
F = float(input("faltas: "))

H = E - ((1/4) * F)
E = round(E, 2)
F = round(F, 2)

if H > 400.0:
	G = 500.0
else:
	G = 100.0
	
print(E, "extras e",F ,"de falta")
print(G)
-- OUTPUT:
420.0 extras e 20.0 de falta
500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:06:05) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E = float(input("extras: "))
F = float(input("faltas: "))

H = E - ((1/4) * F)
E = round(E, 2)
F = round(F, 2)

if H > 400.0:
	G = 500.0
else:
	G = 100.0
	
print(E, "extras e",F ,"de falta")
print(G)
-- EXECUTION TIME:
0.131427
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:07:24) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E = float(input("extras: "))
F = float(input("faltas: "))

H = E - ((1/4) * F)

if H > 400.0:
	G = 500.0
else:
	G = 100.0
	
print(E, "extras e",F ,"de falta")
print(G, 2)
-- OUTPUT:
420.0 extras e 20.0 de falta
500.0 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:08:01) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E = float(input("extras: "))
F = float(input("faltas: "))

H = E - ((1/4) * F)

if H > 400.0:
	G = 500.0
else:
	G = 100.0
	
print(E, "extras e",F ,"de falta")
print(round(G, 2))
-- OUTPUT:
420.0 extras e 20.0 de falta
500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:08:07) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E = float(input("extras: "))
F = float(input("faltas: "))

H = E - ((1/4) * F)

if H > 400.0:
	G = 500.0
else:
	G = 100.0
	
print(E, "extras e",F ,"de falta")
print(round(G, 2))
-- EXECUTION TIME:
0.117023
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:08:19) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E = float(input("extras: "))
F = float(input("faltas: "))

H = E - ((1/4) * F)

if H > 400.0:
	G = 500.0
else:
	G = 100.0
	
print(E,"extras e",F ,"de falta")
print(round(G, 2))
-- OUTPUT:
420.0 extras e 20.0 de falta
500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:08:24) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E = float(input("extras: "))
F = float(input("faltas: "))

H = E - ((1/4) * F)

if H > 400.0:
	G = 500.0
else:
	G = 100.0
	
print(E,"extras e",F ,"de falta")
print(round(G, 2))
-- EXECUTION TIME:
0.158192
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:08:32) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E = float(input("extras: "))
F = float(input("faltas: "))

H = E - ((1/4) * F)

if H > 400.0:
	G = 500.0
else:
	G = 100.0
	
print(E,"extras e",F ,"de falta")
print(round(G, 2))
-- OUTPUT:
420.0 extras e 20.0 de falta
500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:09:39) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E = float(input("extras: "))
F = float(input("faltas: "))

H = E - ((1/4) * F)

if H > 400.0:
	G = 500.0
else:
	G = 100.0
	
print(E,"extras e",F ,"de falta")
print("R$",round(G, 2))
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:09:51) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E = float(input("extras: "))
F = float(input("faltas: "))

H = E - ((1/4) * F)

if H > 400.0:
	G = 500.0
else:
	G = 100.0
	
print(E,"extras e",F ,"de falta")
print("R$",round(G, 2))
-- EXECUTION TIME:
0.164941
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
